src/style.scss
.wp-block-accordion-panel-accordion-panel{
	flex-grow: 0;
	display: flex;
	--transTime:0.5s;
	--transEase:cubic-bezier(.72,.72,.01,.99);
	transition:flex-grow var(--transTime) var(--transEase);
	position: relative;
}
.wp-block-accordion-panel-accordion-panel:is(
	.is-panel-open, .is-selected
){
	flex-grow: 1;
}

.wp-block-accordion-panel-accordion-panel::before{
	content:'';
	position: absolute;
	inset: 0% 0% 0% 0%;
	background-color: #ffffff;
	animation: accordionBg-out var(--transTime) var(--transEase) forwards;
	animation-delay: 0s;
	pointer-events: none !important;
}
.wp-block-accordion-panel-accordion-panel:not(.is-panel-open, .is-selected):hover::before,
.wp-block-accordion-panel-accordion-panel:is(
	.is-panel-open, .is-selected
)::before{
	animation: accordionBg-In var(--transTime) var(--transEase) forwards;
	animation-delay: 0s !important;
}

@keyframes accordionBg-In {
	from{
		inset: 0% 0% 0% 100% ; 
	}
	to{
		inset: 0% 0% 0% 0% ; 
	}
}
@keyframes accordionBg-out {
	from{
		inset: 0% 0% 0% 0% ; 
	}
	to{
		inset: 0% 100% 0% 0% ; 
	}
}

.wp-block-accordion-panel-accordion-panel .panel-header{
	writing-mode: vertical-lr;
	text-orientation: mixed;
	text-decoration: none;
	overflow: hidden;
}

.wp-block-accordion-panel-accordion-panel .panel-header .panel-headings{
	display: grid;
	grid-template-columns: 1fr;
	grid-template-rows: 1fr;
	transform:translateX(-100%);
	animation: headingsOut var(--transTime) var(--transEase) forwards;
	animation-delay: 0s;
}
.wp-block-accordion-panel-accordion-panel:hover .panel-header .panel-headings,
.wp-block-accordion-panel-accordion-panel:is(
	.is-panel-open, .is-selected
) .panel-header .panel-headings{
	animation: headingsIn var(--transTime) var(--transEase) forwards;
	animation-delay: 0s !important;
}

.wp-block-accordion-panel-accordion-panel .panel-header .panel-heading{
	grid-area: 1/1/1/1;
	position: relative;
}
.wp-block-accordion-panel-accordion-panel .panel-header .panel-heading-close:last-child{
	left:200%;
}
.wp-block-accordion-panel-accordion-panel .panel-header .panel-heading-open{
	color: #000000;
	left: 100%;
}

@keyframes headingsIn {
	from{
		transform: translateX(0%);
	}
	to{
		transform: translateX(-100%);
	}
}
@keyframes headingsOut {
	from{
		transform: translateX(-100%);
	}
	to{
		transform: translateX(-200%);
	}
}




.wp-block-accordion-panel-accordion-panel .panel-content{
	display: none;
	align-self: stretch;
	width: 0%;
}
.wp-block-accordion-panel-accordion-panel.is-panel-open .panel-content{
	display: block;
	width: 100%;
}

.wp-block-accordion-panel-accordion-panel *:has(.accordionRule){
	position: relative;
}
.wp-block-accordion-panel-accordion-panel .accordionRule{
	--ruleWidth:2px;
	position: absolute;
	background-color: #000000;
	display: block;
}

.wp-block-accordion-panel-accordion-panel .accordionRule:is(
	.accordionRule-left, .accordionRule-right
){
	top: 0px;
	height: 100%;
	width: var(--ruleWidth);
}
.accordionRule.accordionRule-left{
	left: 0px;
	transform: translate(-50%);
}
.accordionRule.accordionRule-right{
	right: 0%;
	transform: translate(50%);
	// background-color: green;
}

